2013年9月5号 0.2.2版本发布
1.修复AV.Query的include方法无法正常查询的bug。


2013年08月28号 0.2.1版本发布

1.支持App的Master Key设置
2.更新API文档，添加AV.Cloud下的函数和类说明