@@ -1,2 +1,0 @@
-var mock = require('./cloud_code.js');
-mock.runCloudCode('./cloud/main.js')
