@@ -1,30 +1,0 @@
-{
- "name": "avoscloud-code-mock-sdk",
- "version": "0.1.0",
- "main": "./cloud_code.js",
- "description": "AVOSCloud Cloud Code Mock SDK.!",
- "dependencies": {
-    "avoscloud-sdk"				: "latest",
-    "underscore"				: "1.4.4",
-    "moment"					: "2.0.0",
-    "express"					: "3.4.0",
-    "express-ejs-layouts"		: "0.3.1",
-    "weibo"						: "0.6.9",
-    "node-qiniu"				: "6.1.0",
-    "mailgun"					: "latest",
-    "mandrill"					: "latest",
-    "stripe"					: "latest",
-    "sendgrid"					: "latest",
-    "rekuire"					: "0.1.3",
-    "ejs"						: "0.8.4",
-    "jade"  					: "0.26.0"
-  },
-  "devDependencies": {
-    "mocha":"1.9.0",
-    "expect.js ":"0.2.0"
-  },
-  "author" : {
-      "name" : "dennis zhuang",
-      "email" : "xzhuang@avos.com"
- }
-}
